--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,3 +12,6 @@ rules:
     - ignorePackages
     - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+globals: 
+    test: readonly
+    expect: readonly
